--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -26,6 +26,7 @@ SSJS is an XX-century-version of JavaScript paired with proprietary libraries cr
 
 ### SSJS Snippets
 
+- [AMPScript in SSJS](./ssjs/ssjs-snippet-ampscript-in-ssjs.mdx)
 - [MobileConnect Phone Change](./ssjs/ssjs-snippet-mobileconnect-phone-change.mdx)
 
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/ssjs/ssjs-if-and-switch">Read about SSJS</a>
